# Cryptd

./: README.md  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: android.yml
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/qemu/lib/: libcap.so.2.69  libgirepository-2.0.so.0  libglib-2.0.so.0.8600.3  libjpeg.so.8  libspice-server.so.1
app/src/main/assets/qemu/share/qemu/: trace-events-all
app/src/main/assets/qemu/share/qemu/firmware/: 50-edk2-i386-secure.json  50-edk2-x86_64-secure.json  60-edk2-aarch64.json  60-edk2-arm.json  60-edk2-i386.json  60-edk2-x86_64.json
app/src/main/cpp/: vmbridge.cpp
app/src/main/java/com/cryptd/vm/: DiskCreator.kt  KeyMap.kt  LogActivity.kt  MainActivity.kt  NativeBridge.kt  QemuInstaller.kt  VmFiles.kt  VmLogStore.kt  VncActivity.kt  VncClient.kt  VncView.kt
app/src/main/res/layout/: activity_main.xml
scripts/: build-qemu-android.sh
